# shallow-water-simulation

./: CMakeLists.txt  README.md
src/: main.cpp  shader.frag  shader.hpp  shader.vert  trimesh.hpp
